# AIET

./: .gitignore  CHAY_AI.bat  CHAY_NGAM.vbs  Dockerfile  README.md  pyproject.toml  render.yaml
crawled_stories/su-thay-the-hang-dau-tieu-duong-dong-qua/: chapter1.json  chapter10.json  chapter11.json  chapter12.json  chapter13.json  chapter14.json  chapter15.json  chapter16.json  chapter17.json  chapter18.json  chapter19.json  chapter2.json  chapter20.json  chapter21.json  chapter22.json  chapter23.json  chapter24.json  chapter25.json  chapter26.json  chapter27.json  chapter28.json  chapter29.json  chapter3.json  chapter30.json  chapter31.json  chapter32.json  chapter33.json  chapter34.json  chapter35.json  chapter36.json  chapter37.json  chapter38.json  chapter39.json  chapter4.json  chapter40.json  chapter41.json  chapter42.json  chapter43.json  chapter44.json  chapter45.json  (+11 more)
crawled_stories/tien-nghich/: chapter1.json  chapter10.json  chapter11.json  chapter12.json  chapter13.json  chapter14.json  chapter15.json  chapter16.json  chapter17.json  chapter18.json  chapter19.json  chapter2.json  chapter20.json  chapter21.json  chapter22.json  chapter23.json  chapter24.json  chapter25.json  chapter26.json  chapter27.json  chapter28.json  chapter29.json  chapter3.json  chapter30.json  chapter31.json  chapter32.json  chapter33.json  chapter34.json  chapter35.json  chapter36.json  chapter37.json  chapter38.json  chapter39.json  chapter4.json  chapter40.json  chapter41.json  chapter42.json  chapter43.json  chapter44.json  chapter45.json  (+11 more)
src/app/: config.py  main.py
(+13 files in other folders)
